# ByteCraft

./: .gitignore  CMakeLists.txt  README.md  bytecode.cpp  bytecode.hpp  isa.hpp  main.cpp  test.asm  util.hpp  vm.cpp
.github/workflows/: ci.yaml
include/: vm.hpp
include/bytecraft/: asm.hpp  bytecode.hpp  isa.hpp  util.hpp  vm.hpp
src/: asm.cpp  main.cpp  vm.cpp
tests/: test_vm_registers.cpp
